:bug: (nav): Fix shift when changing pages on mobile

--- a/frontend/src/sass/main.scss
+++ b/frontend/src/sass/main.scss
@@ -63,6 +63,7 @@ img::selection {
 
 #app {
     padding-bottom: 100px;
+    overflow-x: hidden;
 
     @include media-breakpoint-down(xs) {
         padding-bottom: 150px;
